updated CharacterCards' test and fixed some bugs (not all bugs have been fixed)